# backend/src/main/java/life2food/backend/controller/ProductController.java
@@ -1,0 +1,62 @@
+package life2food.backend.controller;
+
+import java.util.List;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
+
+import life2food.backend.model.Product;
+import life2food.backend.repository.ProductRepository;
+
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PatchMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+
+
+
+@RestController
+@RequestMapping("/products")
+public class ProductController {
+
+    @Autowired
+    public ProductRepository productRepository;
+
+    @GetMapping()
+    public List<Product> getAllProducts(){
+        return productRepository.findAll();
+    }
+
+    @GetMapping("/{id}")
+    public Product getProductById(@PathVariable Long id) {
+        return productRepository.findById(id).orElse(null);
+    }
+    
+
+    @PostMapping()
+    public Product createProduct(@RequestBody Product product) {
+        return productRepository.save(product);
+    }
+    
+    @PatchMapping("/{id}")
+    public Product updateProduct(@PathVariable Long id,@RequestBody Product product) {
+        Product existingProduct = productRepository.findById(id).orElseThrow();
+        existingProduct.setName(product.getName());
+        existingProduct.setDescription(product.getDescription());
+        existingProduct.setPrice(product.getPrice());
+        existingProduct.setAmount(product.getAmount());
+        return productRepository.save(existingProduct);
+    }
+
+    @DeleteMapping("/{id}")
+    public void deleteProduct(@PathVariable Long id) {
+        productRepository.deleteById(id);
+    }
+
+
+
+}
