# backend/src/main/java/life2food/backend/controller/UserController.java
@@ -1,7 +1,9 @@
 package life2food.backend.controller;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -11,6 +13,7 @@ import org.springframework.web.bind.annotation.RestController;
 import life2food.backend.model.User;
 import life2food.backend.repository.UserRepository;
 
+
 @RestController
 @RequestMapping("/users")
 public class UserController {
@@ -18,14 +21,34 @@ public class UserController {
     @Autowired
     public UserRepository userRepository;
 
-    @GetMapping("")
+    @GetMapping()
     public Iterable<User> getAllUsers() {
         return userRepository.findAll();
     }
 
-    @PostMapping("")
+    @GetMapping("/{id}")
+    public User getUserById(@PathVariable Long id) {
+        return userRepository.findById(id).orElse(null);
+    }
+    
+
+    @PostMapping()
     public User createUser(@RequestBody User user) {
         return userRepository.save(user);
+    }
+
+    @PatchMapping("/{id}")
+    public User updateUser(@PathVariable Long id, @RequestBody User user) {
+        User existingUser = userRepository.findById(id).orElseThrow();
+        existingUser.setFirst_name(user.getFirst_name());
+        existingUser.setLast_name(user.getLast_name());
+        existingUser.setEmail(user.getEmail());
+        return userRepository.save(existingUser);
+    }
+
+    @DeleteMapping("/{id}")
+    public void deleteUser(@PathVariable Long id) {
+        userRepository.deleteById(id);
     }
 
 
