# backend/src/main/java/life2food/backend/model/Order.java
@@ -1,29 +1,0 @@
-package life2food.backend.model;
-
-import java.sql.Date;
-
-import jakarta.persistence.Entity;
-import jakarta.persistence.GeneratedValue;
-import jakarta.persistence.GenerationType;
-import jakarta.persistence.Id;
-import jakarta.persistence.ManyToOne;
-import lombok.Data;
-
-@Entity
-@Data
-public class Order {
-    
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private Long id;
-
-    @ManyToOne
-    private User customer;
-
-    @ManyToOne
-    private User business;
-
-    private String status;
-
-    private Date createdAt;
-}
